--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-imagemin": "^3.4.0",
     "gulp-less": "^3.3.0",
+    "gulp-sourcemaps": "^2.6.1",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "normalize.css": "^7.0.0"
